--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
-  It's work!
+  Штиль Кирило 
   <a href="lab2three_js.html">Лабораторна 2</a>
+ <a href="Тиждень 1">Тиждень 1</a>
+
+
+
 </html>
