--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   Штиль Кирило 
+  
+  <a href="Lab1_1.html">Лабораторна 1</a>
   <a href="lab2three_js.html">Лабораторна 2</a>
  <a href="Тиждень 1">Тиждень 1</a>
 
