--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <a href="Lab1_1.html">Лабораторна 1</a>
   <a href="lab2three_js.html">Лабораторна 2</a>
  <a href="Тиждень 1">Тиждень 1</a>
+<a href="facemesh.html">Тиждень 11</a>
+
+  
 
 
 
