--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <a href="lab2three_js.html">Лабораторна 2</a>
  <a href="tyshden1.html">Тиждень 1</a>
 <a href="tyshden2.html">Тиждень 2</a>
+  <a href="tyshden3.html">Тиждень 3</a>
   
 <a href="facemesh.html">Тиждень 11</a>
 
