--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
   Штиль Кирило 
   
-  <a href="Lab1_1.html">Лабораторна 1</a>
-  <a href="lab2three_js.html">Лабораторна 2</a>
- <a href="tyshden1.html">Тиждень 1</a>
-<a href="tyshden2.html">Тиждень 2</a>
-  <a href="tyshden3.html">Тиждень 3</a>
+  <p> <a href="Lab1_1.html">Лабораторна 1</a>
+  <p> <a href="lab2three_js.html">Лабораторна 2</a>
+ <p><a href="tyshden1.html">Тиждень 1</a>
+ <p><a href="tyshden2.html">Тиждень 2</a>
+   <p><a href="tyshden3.html">Тиждень 3</a>
 
 
-  <a href="ARindex5.html">Тиждень 5</a>
-<a href="facemesh.html">Тиждень 11</a>
+  <p> <a href="ARindex5.html">Тиждень 5</a>
+ <p><a href="facemesh.html">Тиждень 11</a>
 
   
 
