--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <p><a href="tyshden1.html">Тиждень 1</a>
  <p><a href="tyshden2.html">Тиждень 2</a>
    <p><a href="tyshden3.html">Тиждень 3</a>
- <p><a href="threejs_first.html">Тиждень 4</a>
+ <p><a href="pattern-bukva-a.patt/pattern-bukva-a.png/threejs_first.html">Тиждень 4</a>
 
   <p> <a href="ARindex5.html">Тиждень 5</a>
  <p><a href="facemesh.html">Тиждень 11</a>
