--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <p><a href="tugden4/ARindex4.html">Тиждень 4</a>
 
   <p> <a href="maska/facemesh.html">Тиждень 5</a>
- <p><a href="facemesh.html">Тиждень 11</a>
+ <p><a href="facemesh.html">Тиждень 11 маска</a>
 
 
 
