--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <p><a href="tyshden3.html">Тиждень 3</a>
  <p><a href="tugden4/ARindex4.html">Тиждень 4</a>
 
-  <p> <a href="maska/facemesh.html">Тиждень 5</a>
+  <p> <a href="tugden5/ARindex5.html">Тиждень 5</a>
  <p><a href="facemesh.html">Тиждень 11 </a>
 
 
