--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
  <p><a href="tugden4/ARindex4.html">Тиждень 4</a>
 
   <p> <a href="tugden5/ARindex5.html">Тиждень 5</a>
+ <p> <a href="tugden7/threejs_first.html">Тиждень 7</a>
+
+    
   <p> <a href="tugden10/tm_exp2.html">Тиждень 10</a>   
  <p><a href="facemesh.html">Тиждень 11 </a>
 
