--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
  <p><a href="tugden4/ARindex4.html">Тиждень 4</a>
 
   <p> <a href="tugden5/ARindex5.html">Тиждень 5</a>
+      <p> <a href="tugden6/ARindex6.html">Тиждень 6</a>
  <p> <a href="tugden7/dzweek7.html">Тиждень 7</a>
 
     
