--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     
   <p> <a href="tugden10/tm_exp2.html">Тиждень 10</a>   
- <p><a href="facemesh.html">Тиждень 11 </a>
+ <p><a href="сонячна система/facemesh.html">Тиждень 11 </a>
 
 
 
