--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  <p><a href="tugden11/facemesh.html">Тиждень 11 </a>
 
 
-
+<p><a href="Екзимінаційний/home_page.html">Екзимінаційни проект з програмування </a>
 
 
 </html>
